# enhanced-behave-automation

./: .gitignore  README.md  behave.ini  pyproject.toml  requirements.txt
features/: environment.py  login.feature
features/steps/: navigation_steps.py
utils/: language_manager.py
